[tool.poetry]
name = "Robsym Dooh"
version = "0.1.0"
description = ""
authors = ["Dan O'Sullivan <python@osull.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
click = "^8.0.3"
pyinstaller = "^4.8"
rich = "^11.0.0"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
